# algebraic-contours

./: .gitignore  CMakeLists.txt
c1-scripts/: README.md  c1meshing.yml  dz_generate_embedding.ipynb  fig-fitting.sh  generate_embedding.py  generate_offset.py  install_dependencies.py  optimize_directory.py  run_c1.ipynb  run_c1_meshing.py  sweep-refine.sh  sweep-scale.sh  topological_offsets_base.json  tri.py
src/c1_meshing_python/: c1main.py  c1utils.py  callCT.py  callgmsh.py  facesplit.py  generate_fitting_surface.py  generate_local2global.py  generate_parametrization.py  generate_surface.py  parasplit.py  set_cones.py
src/clough_tocher_patches/: CMakeLists.txt  CT_Laplace_Beltrami_codegen.py  Clough_Tocher_Laplace_Beltrami.c  Clough_Tocher_Laplacian.c  Clough_Tocher_Laplacian_old.c  Clough_Toucher_derivation.py  TestConstraintMatrices.ipynb  basischange.ipynb  bezierconstest.ipynb  bilaplacian.ipynb  build_matrices.ipynb  c1_meshing_pipeline.py  c1_meshing_spec.json  c1constraints_base.json  check_ac_am.ipynb  check_ac_am.py  clough_tocher_autogen_constraint_matrices.hpp  clough_tocher_constraint_matrices.cpp  clough_tocher_constraint_matrices.hpp  clough_tocher_patch.cpp  clough_tocher_patch.hpp  clough_tocher_surface.cpp  clough_tocher_surface.hpp  cone_angles.txt  cone_coloring.ipynb  cone_constraints.ipynb  cone_constraints.py  constraint.json  edge_constraint_bezier.py  fitting_bilap.ipynb  generate_ct_constraint_matrices.py  (+7 more)
src/exec/: CMakeLists.txt  generate_cubic_surface.cpp  optimize_cubic_surface.cpp  test_optimization.cpp  test_optimize_cubic_surface.cpp
(+59 files in other folders)
